--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Anjan Halder, Software Engineer, IoT Developer, Photographer.</p>
+            <p>Hello! I am Anjan Halder, Software Engineer, IoT Developer, Programmer.</p>
             <p> I have a great interest in technology and looking for Professional experience and
               try to learn updated technology every moment. I have a sound experience in IoT
               and robotics. Now I want to apply knowledge to build something effective, useful
@@ -94,23 +94,23 @@
             <div class="h4 mt-0 title">About Me</div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase"><img src = 'images/icons/birthday.png' style='vertical-align: middle;width:25px;'/> Birthday:</strong></div>
-              <div class="col-sm-8">23 September,1996</div>
+              <div class="col-sm-8">23 January,1997</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase"><img src = 'images/icons/Email.png' style='vertical-align: middle;width:25px;'/> Email:</strong></div>
-              <div class="col-sm-8">jahirul.amsa@gmail.com</div>
+              <div class="col-sm-8">anjanhalder48@gmail.com</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase"><img src = 'images/icons/phone.png' style='vertical-align: middle;width:25px;'/> Phone:</strong></div>
-              <div class="col-sm-8">+8801521579898</div>
+              <div class="col-sm-8">+8801771041286</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase"><img src = 'images/icons/location.png' style='vertical-align: middle;width:25px;'/> Address:</strong></div>
-              <div class="col-sm-8">Mirpur-1, Dhaka-1216, Bangladesh</div>
+              <div class="col-sm-8">Sreeramkathi, Nazirpur, Pirojpur, Bangladesh</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase"><img src = 'images/icons/language.png' style='vertical-align: middle;width:25px;'/> Language:</strong></div>
-              <div class="col-sm-8">Bangli, English</div>
+              <div class="col-sm-8">Bangli, English, Hindi</div>
             </div>
           </div>
         </div>
