--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </div>
 <div class="section" id="skill">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Professional Skills</div>
+    <div class="h4 text-center mb-4 title">Skills</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
@@ -194,12 +194,9 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Smart Water Quality Monitoring and Controlling System</div>
+            <div class="h5">Audio Watermarking Based on Discrete Tchebichef Transform and Singular Value Decomposition.</div>
             <p class="category">Undergraduate Thesis and Project</p>
-            <p><b>Contribution:</b> In this thesis water data was collected with
-sensors and sent to server and retrieved with android
-application. Water flow, volume, used volume, pH, turbity
-and flushing process was done.</p>
+            <p><b>Contribution:</b> In this thesis an audio file has been used as host signal and a grayscale image was used as watermark.</p>
           </div>
         </div>
       </div>
@@ -208,15 +205,15 @@ and flushing process was done.</p>
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>August 2019 - September 2019</p>
+            <p>August 2018 - September 2018</p>
             <div class="h5">Industrial Attachment</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Data Center Virtualization</div>
-            <div class="category">Contessa Solutions Ltd.</div>
-            <div> <b>Tools:</b>VMware ESXI, vCenter, Windows Server 2012</div>
+            <div class="h5">Creation of meaningful digital products </div>
+            <div class="category">w3eden.com/</div>
+           
           </div>
         </div>
       </div>
