--- a/index.html
+++ b/index.html
@@ -247,7 +247,14 @@ hive, Basic Unix command, Vmware </div>
             <div class="h5">Training</div>
           </div>
         </div>
-        
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Online Retail Management System</div>
+            <div class="category">Academic Project</div>
+            <div> <b>Tools:</b> HTML,CSS,MySQL,JavaScript,PHP</div>
+          </div>
+        </div>
+      </div>
     </div>
 
 <div class="card">
@@ -260,8 +267,8 @@ hive, Basic Unix command, Vmware </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">BRobo Mechatronics Association (RMA) at CUET</div>
-            <div class="category">Joint General Secretary</div>
+            <div class="h5">Mongol Ovizatrik'71 at CUET</div>
+            <div class="category">Technical Team Lead</div>
           </div>
         </div>
       </div>
